[package]
name = "moderncv"
version = "0.1.0"
edition = "2018"
authors = ["nibon7 <nibon7@163.com>"]
description = "An ergonomic library for programatically generating LaTeX resume."
documentation = "https://docs.rs/moderncv"
repository = "https://github.com/nibon7/moderncv-rs"
license = "MIT"
keywords = ["latex", "tex", "resume"]
categories = ["template-engine", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
latex = "0.3.1"
